--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_search">Search</string>
     <string name="title_my_truck">My Truck</string>
+    <string name="title_food">Food</string>
+    <string name="title_trucks">Trucks</string>
+    <string name="truck_image_content_description">Image of the Food Truck</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
