--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_search">Search</string>
     <string name="title_my_truck">My Truck</string>
-    <string name="title_food">Food</string>
-    <string name="title_trucks">Trucks</string>
+    <string name="title_food">Search Food</string>
+    <string name="title_trucks">Search Trucks</string>
     <string name="truck_image_content_description">Image of the Food Truck</string>
     <string name="open_hours">Open Hours</string>
     <string name="phone_number">Phone</string>
@@ -15,11 +15,16 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="add">Add</string>
-    <string name="menu">Menu</string>
+    <string name="menu">Menu Items</string>
     <string name="through_char"> - </string>
     <string name="and_char"> : </string>
     <string name="opens">Opens: </string>
     <string name="closes">Closes: </string>
+    <string name="upload">Upload</string>
+    <string name="delete">Delete</string>
+    <string name="dollar_symbol">$</string>
+    <string name="menu_item_hint">Description</string>
+    <string name="price_hint">Price</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
