--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,14 @@
     <string name="menu_item_hint">Description</string>
     <string name="price_hint">Price</string>
     <string name="add_to_favorites">Add to Favorites</string>
+    <string name="get_directions">Get Directions</string>
+    <string name="try_search">Try Searching For Something</string>
+    <string name="sign_in">Sign In</string>
+    <string name="register">Register</string>
+    <string name="add_image">Change Image</string>
+    <string name="remove_truck">Delete My Truck</string>
+    <string name="yes">Yes</string>
+    <string name="no">Cancel</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -61,6 +69,7 @@
     </string-array>
 
     <string-array name="minutes">
+        <item>00</item>
         <item>01</item>
         <item>02</item>
         <item>03</item>
