--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_favorites">Favorites</string>
     <string name="title_search">Search</string>
     <string name="title_my_truck">My Truck</string>
-    <string name="title_food">Search Food</string>
+    <string name="title_food">Categories</string>
     <string name="title_trucks">Search Trucks</string>
     <string name="truck_image_content_description">Image of the Food Truck</string>
     <string name="open_hours">Open Hours</string>
@@ -34,9 +34,24 @@
     <string name="remove_truck">Delete My Truck</string>
     <string name="yes">Yes</string>
     <string name="no">Cancel</string>
+    <string name="category">Category</string>
+    <string name="no_trucks_available">No Food Trucks Available</string>
+    <string name="not_found">No Results Found</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="categories">
+        <item>Burger Joint</item>
+        <item>Candy Shop</item>
+        <item>"Criollo"</item>
+        <item>Coffee Shop</item>
+        <item>Deep Fried</item>
+        <item>Mexican</item>
+        <item>Pasta</item>
+        <item>Pizza</item>
+        <item>Sea Food</item>
+    </string-array>
 
     <string-array name="days">
         <item>Monday</item>
